--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <meta name="description" content="Ексклюзивна колекція чорного шовку від Silk4me. 100% натуральний шовк Mulberry найвищої якості 6A. Розкіш, елегантність та бездоганний стиль." />
     <meta name="author" content="Silk4me" />
 
+    <style>
+      /* Убираем cursor-pointer со всего виджета */
+      .elevenlabs-widget,
+      .elevenlabs-widget * {
+        cursor: default;
+      }
+    
+      /* Курсор-рука только на кнопке */
+      .elevenlabs-widget button,
+      .elevenlabs-widget [role="button"] {
+        cursor: pointer;
+      }
+    
+      /* Заголовок "Потрібна допомога?" */
+      .elevenlabs-widget h3,
+      .elevenlabs-widget .header-title {
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 1.3;
+      }
+    </style>
+
     <meta property="og:title" content="Silk4me — Black Collection" />
     <meta property="og:description" content="Ексклюзивна колекція чорного шовку. 100% натуральний шовк Mulberry найвищої якості." />
     <meta property="og:type" content="website" />
