--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="uk">
 
 <head>
+  <link rel="icon" href="/silk4me/favicon.ico" type="image/x-icon" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="TCLnyHIswT1paA_50G2Qy-OIybRX-8s9iLzGLgKFkD8" />
+
 
   <title>Silk4me — Black Collection | Преміум шовк</title>
   <meta name="description"
@@ -19,7 +21,7 @@
     content="Ексклюзивна колекція чорного шовку. 100% натуральний шовк Mulberry найвищої якості." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://nastyadudk.github.io/silk4me/" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
