--- a/index.html
+++ b/index.html
@@ -2,218 +2,92 @@
 <html lang="uk">
 
 <head>
-  <link rel="icon" href="/silk4me/favicon.ico" type="image/x-icon" />
+  <!-- BASIC -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Silk4me" />
   <meta name="google-site-verification" content="TCLnyHIswT1paA_50G2Qy-OIybRX-8s9iLzGLgKFkD8" />
 
-
+  <!-- TITLE / DESCRIPTION -->
   <title>Silk4me — Black Collection | Преміум шовк</title>
   <meta name="description"
-    content="Ексклюзивна колекція чорного шовку від Silk4me. 100% натуральний шовк Mulberry найвищої якості 6A. Розкіш, елегантність та бездоганний стиль." />
-  <meta name="author" content="Silk4me" />
-  <meta name="robots" content="index,follow" />
+    content="Silk4me — преміальна колекція чорного шовку Mulberry 6A: наволочки, піжами та аксесуари. Натуральний шовк, розкіш і бездоганна якість." />
+
+  <!-- CANONICAL -->
   <link rel="canonical" href="https://nastyadudk.github.io/silk4me/" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Silk4me — Black Collection" />
-  <meta property="og:description"
-    content="Ексклюзивна колекція чорного шовку. 100% натуральний шовк Mulberry найвищої якості." />
+  <!-- FAVICON -->
+  <link rel="icon" href="/silk4me/favicon.ico" type="image/x-icon" />
+
+  <!-- OPEN GRAPH -->
   <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Silk4me" />
+  <meta property="og:title" content="Silk4me — Black Collection" />
+  <meta property="og:description" content="Преміальна колекція чорного шовку Mulberry 6A від бренду Silk4me." />
   <meta property="og:url" content="https://nastyadudk.github.io/silk4me/" />
+  <meta property="og:image" content="https://nastyadudk.github.io/silk4me/logo.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-
-  <!-- Twitter -->
+  <!-- TWITTER -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@silk4me" />
   <meta name="twitter:title" content="Silk4me — Black Collection | Преміум шовк" />
-  <meta name="twitter:description"
-    content="Ексклюзивна колекція чорного шовку від Silk4me. 100% натуральний шовк Mulberry 6A." />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:description" content="Ексклюзивний чорний шовк Mulberry 6A від бренду Silk4me." />
+  <meta name="twitter:image" content="https://nastyadudk.github.io/silk4me/logo.png" />
 
-  <!-- Fonts -->
+  <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@300;400;500&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500&display=swap"
     rel="stylesheet" />
 
-  <style>
-    /* ===== Mobile phone button ===== */
-    .mobile-assistant {
-      position: fixed;
-      right: 16px;
-      bottom: 16px;
-      width: 56px;
-      height: 56px;
-      border-radius: 9999px;
-      background: #1f4c41;
-      color: #fff;
-      border: none;
-      font-size: 22px;
-      display: none;
-      /* enabled on mobile below */
-      place-items: center;
-      z-index: 999999;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
-      cursor: pointer;
-      -webkit-tap-highlight-color: transparent;
-    }
-
-    .mobile-assistant:active {
-      transform: translateY(1px);
-    }
-
-    /* Make sure host itself isn't a pointer */
-    elevenlabs-convai {
-      cursor: default;
-    }
-
-    /* Desktop: keep standard widget behavior (no mobile phone button) */
-    @media (min-width: 641px) {
-      .mobile-assistant {
-        display: none !important;
+  <!-- STRUCTURED DATA -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://nastyadudk.github.io/silk4me/#organization",
+        "name": "Silk4me",
+        "url": "https://nastyadudk.github.io/silk4me/",
+        "logo": "https://nastyadudk.github.io/silk4me/logo.png",
+        "sameAs": ["https://www.instagram.com/silk4me"]
+      },
+      {
+        "@type": "Brand",
+        "@id": "https://nastyadudk.github.io/silk4me/#brand",
+        "name": "Silk4me"
+      },
+      {
+        "@type": "Product",
+        "@id": "https://nastyadudk.github.io/silk4me/#product",
+        "name": "Silk4me Black Collection",
+        "brand": { "@id": "https://nastyadudk.github.io/silk4me/#brand" },
+        "description": "Преміальна колекція чорного шовку Mulberry 6A.",
+        "material": "Mulberry silk 6A",
+        "url": "https://nastyadudk.github.io/silk4me/",
+        "offers": {
+          "@type": "Offer",
+          "availability": "https://schema.org/InStock"
+        }
       }
-    }
-
-    /* Mobile: show phone button, keep widget initialized but visually hidden until opened */
-    @media (max-width: 640px) {
-      .mobile-assistant {
-        display: grid;
-      }
-
-      elevenlabs-convai {
-        position: fixed;
-        right: 12px;
-        bottom: 86px;
-        /* leaves space for the phone button */
-        z-index: 999998;
-
-        opacity: 0;
-        pointer-events: none;
-        transform: translateY(8px);
-        transition: opacity 0.2s ease, transform 0.2s ease;
-      }
-
-      body.convai-open elevenlabs-convai {
-        opacity: 1;
-        pointer-events: auto;
-        transform: translateY(0);
-      }
-
-      body.convai-open .mobile-assistant {
-        display: none;
-      }
-    }
-  </style>
+    ]
+  }
+  </script>
 </head>
 
 <body>
   <div id="root"></div>
+
+  <!-- APP -->
   <script type="module" src="/src/main.tsx"></script>
 
-  <!-- ElevenLabs ConvAI widget -->
+  <!-- ElevenLabs ConvAI -->
   <elevenlabs-convai agent-id="agent_2101kfzp9g9deyd8462gp5q2dss9"></elevenlabs-convai>
   <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
-
-  <!-- Mobile "phone" button -->
-  <button class="mobile-assistant" aria-label="Поговорити з консультантом">
-    📞
-  </button>
-
-  <script>
-    (function () {
-      const OPEN_CLASS = "convai-open";
-      const WIDGET_SELECTOR = "elevenlabs-convai";
-      const BTN_SELECTOR = ".mobile-assistant";
-
-      const sleep = (ms) => new Promise((r) => setTimeout(r, ms));
-      const isMobile = () =>
-        window.matchMedia && window.matchMedia("(max-width: 640px)").matches;
-
-      async function getShadowRoot() {
-        const el = document.querySelector(WIDGET_SELECTOR);
-        if (!el) return null;
-
-        const start = Date.now();
-        while (!el.shadowRoot) {
-          if (Date.now() - start > 15000) return null;
-          await sleep(150);
-        }
-        return el.shadowRoot;
-      }
-
-      function findStartCandidate(shadow) {
-        const nodes = shadow.querySelectorAll("button,[role='button'],a");
-        for (const el of nodes) {
-          const txt = (el.textContent || "").toLowerCase();
-          const aria = (el.getAttribute?.("aria-label") || "").toLowerCase();
-          const title = (el.getAttribute?.("title") || "").toLowerCase();
-
-          const looksLikeStart =
-            txt.includes("start a call") ||
-            txt.includes("поговорити") ||
-            aria.includes("start a call") ||
-            aria.includes("поговорити") ||
-            title.includes("start a call") ||
-            title.includes("поговорити");
-
-          if (looksLikeStart) return el;
-        }
-        return null;
-      }
-
-      function isStartButtonVisible(shadow) {
-        return !!findStartCandidate(shadow);
-      }
-
-      async function openAndStartCall() {
-        document.body.classList.add(OPEN_CLASS);
-
-        // Try to click Start/Поговорити inside widget (if UI shows it)
-        const shadow = await getShadowRoot();
-        if (!shadow) return;
-
-        for (let i = 0; i < 30; i++) {
-          const btn = findStartCandidate(shadow);
-          if (btn) {
-            btn.click();
-            return;
-          }
-          await sleep(200);
-        }
-      }
-
-      async function setupAutoCollapse() {
-        const shadow = await getShadowRoot();
-        if (!shadow) return;
-
-        const observer = new MutationObserver(() => {
-          // Most reliable: when widget returns to "Start a call / Поговорити" state
-          // => collapse back to phone icon on mobile
-          if (isMobile() && isStartButtonVisible(shadow)) {
-            document.body.classList.remove(OPEN_CLASS);
-          }
-        });
-
-        observer.observe(shadow, {
-          childList: true,
-          subtree: true,
-          characterData: true,
-        });
-      }
-
-      function setupButton() {
-        const btn = document.querySelector(BTN_SELECTOR);
-        btn?.addEventListener("click", openAndStartCall);
-      }
-
-      document.addEventListener("DOMContentLoaded", () => {
-        setupButton();
-        setupAutoCollapse();
-      });
-    })();
-  </script>
 </body>
 
 </html>
